[package]
name = "reView"
version = "0.1.0"
authors = ["Simon Struck <simon@simonscode.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.15.3"
proc-maps = "0.1.6"
rav1e = "0.3.4"
hex = "0.4.2"
memreader = "0.1.1"
anyhow = "1.0.34"
