[package]
name = "reView"
version = "0.1.0"
authors = ["Simon Struck <simon@simonscode.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
pin-project = "1.0.1"
tokio-tungstenite = "0.12.0"
tokio = { version = "0.3.3", features = ["io-std", "rt-multi-thread", "macros", "stream", "time"] }
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }

#ws = "0.9.1"
sysinfo = "0.15.3"
proc-maps = "0.1.6"
memreader = "0.1.1"

[dependencies.tungstenite]
version = "0.11.1"
default-features = false
