[package]
name = "reView"
version = "0.1.0"
authors = ["Simon Struck <simon@simonscode.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.15.3"
proc-maps = "0.1.6"
memreader = "0.1.1"
lazy_static = "1.4.0"
ws = "0.9.1"
rust-embed = "5.6.0"
simple-server = "0.4.0"
